crates/theoremc-macros/tests/expand/missing_theorem.rs
theoremc_macros::theorem_file!("tests/expand/this_file_does_not_exist.theorem");

fn main() {}
